fix: equalize desktop nav edge gaps around menu links

--- a/src/index.css
+++ b/src/index.css
@@ -661,7 +661,7 @@
 		align-items: center;
 		gap: 0.5rem;
 		flex: 0 0 auto;
-		margin-left: auto;
+		margin-left: 0;
 		justify-content: flex-end;
 	}
 
@@ -820,7 +820,7 @@
 
 		.main-menu .menu-right {
 			display: flex !important;
-			justify-content: space-evenly;
+			justify-content: space-between;
 			width: 100%;
 		}
 
